--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dotenv": "^8.2.0",
     "gsap": "^3.0.1",
     "react": "^16.12.0",
     "react-datepicker": "^2.10.1",
